added auth and UI changes+login with email

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-NEXTAUTH_URL = "http://localhost:3000/"
+NEXTAUTH_URL ="http://localhost:3000/"
+DATABASE_URL="postgresql://postgres:t0276145e@localhost:5432/animechat"
