--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXTAUTH_URL ="http://localhost:3000/"
-DATABASE_URL="postgresql://postgres:t0276145e@localhost:5432/animechat"
+NEXTAUTH_SECRET = "mdiouahdUIAWBDuiybndajlndaBWDUYb"
+DATABASE_URL="postgresql://postgres:t0276145e@localhost:5432/anione"
+GOOGLE_CLIENT_ID="631228077535-r0h5j7j33lirojdu8e5hh6b4brtj4st2.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET=""
