--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@auth/prisma-adapter": "^2.6.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "gpt-tokenizer": "^2.5.0",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
