--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stripe/stripe-js": "^4.8.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "gpt-tokenizer": "^2.5.0",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
+    "micro": "^10.0.1",
     "next": "14.2.14",
     "next-auth": "^4.24.8",
     "prisma-client": "^0.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "stripe": "^17.2.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
