--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "gpt-tokenizer": "^2.5.0",
     "lucide": "^0.447.0",
     "lucide-react": "^0.447.0",
